Changed nav name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a href="#" class="navbar-brand" >Lone Wolf</a>
+      <a href="#" class="navbar-brand" >Crysix69</a>
      <div class="collapse navbar-collapse" id="navmenu">
        <ul class="navbar-nav ms-auto">
         <li class="nav-item">
