change hero section details

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <img src="https://randomuser.me/api/portraits/women/25.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Sophia Brake</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, porro?
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
@@ -266,7 +266,7 @@
           <img src="https://randomuser.me/api/portraits/women/48.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Tanya Thompson</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, esse.
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
@@ -282,7 +282,7 @@
           <img src="https://randomuser.me/api/portraits/women/40.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Hannah Grace</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, magni.
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
@@ -299,7 +299,7 @@
           <img src="https://randomuser.me/api/portraits/women/34.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Sarah Smith</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, assumenda?
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
@@ -317,7 +317,7 @@
           <img src="https://randomuser.me/api/portraits/men/12.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Smith Tom</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, recusandae.
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
@@ -335,7 +335,7 @@
           <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3 " alt="">
             <h3 class="card-title text-dark">Joel Brake</h3>
              <p class="card-text text-dark">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis obcaecati porro veniam tempora assumenda quidem quas necessitatibus culpa? Cum, ullam.
+         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, temporibus.
         </p>
         <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
          <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
